# LivingGo

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
api/: Dockerfile
autogo/: go_game.py  main.py
engine/: go_game.py  main.py  redis_client.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.css  index.css
frontend/src/components/: MinimalGoBoard.tsx  MinimalPage.tsx
redis/: redis.conf
tests/: go_logic_tests.py
