[project]
name = "livinggo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.0",
    "numpy>=1.20.0",

    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "requests>=2.25.0",

    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",

    "rq>=1.15.0",

    "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
